--- a/Server2/src/gui-sinatra/views/layout.erb
+++ b/Server2/src/gui-sinatra/views/layout.erb
@@ -3,6 +3,82 @@
 <head>
     <meta charset="utf-8">
     <title><%= @title %></title>
+<style type="text/css">
+body {
+  background-color: #FFFFCC;
+}
+h2 {
+  width: 500px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+table {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+table tr th {
+  text-align: right;
+}
+form {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+input[type="text"] {
+  margin: 5px;
+  padding:5px;
+  font-size:1.3em;
+  font-family:Arial, sans-serif;
+  color:#aaa;
+  border:solid 1px #ccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+textarea{
+  margin: 5px;
+  width: 300px;
+  height: 300px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  padding:10px;
+  font-size:1.3em;
+  font-family:Arial, sans-serif;
+  color:#aaa;
+  border:solid 1px #ccc;
+}
+input[type="submit"] {
+  font-size: 18px;
+  width: 100%;
+  border: 1px solid #15aeec;
+  background-color: #49c0f0;
+  background-image: -webkit-linear-gradient(top, #49c0f0, #2cafe3);
+  background-image: linear-gradient(to bottom, #49c0f0, #2cafe3);
+  border-radius: 4px;
+  color: #fff;
+  line-height: 36px;
+  -webkit-transition: none;
+  transition: none;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+}
+input[type="submit"]:hover {
+  border:1px solid #1090c3;
+  background-color: #1ab0ec;
+  background-image: -webkit-linear-gradient(top, #1ab0ec, #1a92c2);
+  background-image: linear-gradient(to bottom, #1ab0ec, #1a92c2);
+}
+input[type="submit"]:active {
+  background: #1a92c2;
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
+  color: #1679a1;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, .5);
+}
+
+</style>
+
 </head>
 <body>
     <%= yield %>
