--- a/Server2/src/gui-sinatra/views/layout.erb
+++ b/Server2/src/gui-sinatra/views/layout.erb
@@ -7,7 +7,7 @@
 body {
   background-color: #FFFFCC;
 }
-h2 {
+h2,h3 {
   width: 500px;
   text-align: center;
   margin-left: auto;
@@ -76,7 +76,16 @@ input[type="submit"]:active {
   color: #1679a1;
   text-shadow: 0 1px 1px rgba(255, 255, 255, .5);
 }
-
+#btn-1,#btn-2,#btn-3,#btn-4 {
+  width: 80px;
+  font-size: 14px;
+  }
+table.tb {table-layout: fixed; border-collapse:collapse; margin: 20px auto; width: 600px;}
+table.tb>tbody>tr>th,table.tb>tbody>tr>td { border: 1px solid lightgray; padding: 4px; }
+table.tb>tbody>tr.at>th{width: 100px; text-align: left;}
+table.tb>tbody>tr.at>th.btns{width: 80px;}
+table.tb>tbody>tr.at>td{width: 100px;}
+table.tb>tbody>tr.at>td.btns{width: 80px;}
 </style>
 
 </head>
