auto load in every 3 seconds

--- a/Server2/src/gui-sinatra/views/layout.erb
+++ b/Server2/src/gui-sinatra/views/layout.erb
@@ -87,7 +87,7 @@ table.tb>tbody>tr.at>th.btns{width: 80px;}
 table.tb>tbody>tr.at>td{width: 100px;}
 table.tb>tbody>tr.at>td.btns{width: 80px;}
 </style>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <%= yield %>
