--- a/Server2/src/gui-sinatra/views/list.erb
+++ b/Server2/src/gui-sinatra/views/list.erb
@@ -1,3 +1,11 @@
+<script>
+$(function(){
+    setTimeout(function(){
+        location.reload();
+    },3000);
+});
+</script>
+
 <h2>仮想マシン一覧</h2>
 
 <div>
@@ -6,7 +14,7 @@
 <form action="/00000020" method="get"><input type="submit" value="情報を更新する"></form>
 </div>
 
-<b><i></b></i>
+
 
 <div>
 <table class="tb">
