fix_layout.erb_list.erb

--- a/Server2/src/gui-sinatra/views/layout.erb
+++ b/Server2/src/gui-sinatra/views/layout.erb
@@ -76,6 +76,11 @@ input[type="submit"]:active {
   color: #1679a1;
   text-shadow: 0 1px 1px rgba(255, 255, 255, .5);
 }
+input[type="submit"]:disabled {
+    background-image: none;
+    background-color: #ccc;
+    border-color: #ccc;
+}
 #btn-1,#btn-2,#btn-3,#btn-4 {
   width: 80px;
   font-size: 14px;
