--- a/Server2/src/gui-sinatra/views/list.erb
+++ b/Server2/src/gui-sinatra/views/list.erb
@@ -37,9 +37,9 @@ $(function(){
 @vms.each do |vm|
 %>
 <tr>
-<td class="btns"><form action="/start/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-1" type="submit" value="起動" <% if vm[:Status] == "started" || vm[:Status] == "stopping" %> disabled <% end %>></form></td>
-<td class="btns"><form action="/stop/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-2" type="submit" value="停止" <% if vm[:Status] != "started" %> disabled <% end %>></form></td>
-<td class="btns"><form action="/destroy/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-3" type="submit" value="強制停止" <% if vm[:Status] == "stopped" %> disabled <% end %>></form></td>
+<td class="btns"><form action="/start/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-1" type="submit" value="起動" <% if vm[:Status] == "creating" || vm[:Status] == "started" || vm[:Status] == "stopping" %> disabled <% end %>></form></td>
+<td class="btns"><form action="/stop/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-2" type="submit" value="停止" <% if vm[:Status] == "creating" || vm[:Status] == "stopping" || vm[:Status] == "stopped" %> disabled <% end %>></form></td>
+<td class="btns"><form action="/destroy/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-3" type="submit" value="強制停止" <% if vm[:Status] == "creating" || vm[:Status] == "stopped" %> disabled <% end %>></form></td>
 <td class="btns"><form action="/delete/<%= vm[:InstanceUUID] %>" method="post"><input id="btn-4" type="submit" value="削除"></form></td>
 <td><%= vm[:Status] %></td>
 <td><%= vm[:HostName] %></td>
