add "text-overflow: ellipsis;" on css

--- a/Server2/src/gui-sinatra/views/layout.erb
+++ b/Server2/src/gui-sinatra/views/layout.erb
@@ -91,6 +91,13 @@ table.tb>tbody>tr.at>th{width: 100px; text-align: left;}
 table.tb>tbody>tr.at>th.btns{width: 80px;}
 table.tb>tbody>tr.at>td{width: 100px;}
 table.tb>tbody>tr.at>td.btns{width: 80px;}
+table.tb>tbody>tr>td{
+  width: 100px;
+  max-width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
